Update maven-archetypes-jsp-war project